# cnc-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_docker.sh
data/: README.md
src/: assembly.cpp  assembly.h  main.cpp  makebottle.cpp  makebottle.h  showwindow.cpp  showwindow.h  step.cpp  step.h  viewer.cpp  viewer.h
